# docs

./: .gitignore  BUILD.bazel  README.md  docs.json  mint copy.json  mint.json  mint_db.json  mint_old.json  reo.js
api-reference/: BUILD.bazel  generate_openapi.py  introduction.mdx  openapi copy.json  openapi.json  public_api_routes.yaml
api-reference/auth/: status.mdx
api-reference/automations/endpoints/: create.mdx
api-reference/automations/links/: create.mdx  delete.mdx  get.mdx  list.mdx  update.mdx
api-reference/automations/mailboxes/: create.mdx  delete.mdx  get.mdx  list.mdx  update.mdx
api-reference/automations/tests/: upload.mdx
api-reference/classifications/: cancel.mdx  create.mdx  delete.mdx  get.mdx  list.mdx
api-reference/consensus/: completions.mdx  distances.mdx  reconcile.mdx  responses.mdx
api-reference/database/annotations/: create.mdx  delete.mdx  get.mdx  list.mdx  update.mdx
api-reference/database/dataset_memberships/: create.mdx  delete.mdx  get.mdx  list.mdx
api-reference/database/datasets/: create.mdx  delete.mdx  get.mdx  list.mdx  update.mdx
api-reference/database/files/: create.mdx  delete.mdx  get.mdx  list.mdx
api-reference/deep_research/: extract.mdx
api-reference/deployments/: extract.mdx
api-reference/deployments/endpoints/: create.mdx  delete.mdx  get.mdx  list.mdx  update.mdx
api-reference/deployments/links/: create.mdx  delete.mdx  get.mdx  list.mdx  update.mdx
api-reference/deployments/logs/: get.mdx  list.mdx  rerun.mdx
api-reference/deployments/mailboxes/: create.mdx  delete.mdx  get.mdx  list.mdx  update.mdx
api-reference/deployments/outlook/: create.mdx  delete.mdx  get.mdx  list.mdx  update.mdx
api-reference/deployments/tests/: upload.mdx  webhook.mdx
api-reference/documents/: classify.mdx  correct_image_orientation.mdx  create-inputs.mdx  create-messages.mdx  edit.mdx  extract.mdx  extractions.mdx  generate-split-config.mdx  parse.mdx  preprocess.mdx  split.mdx
api-reference/edit/: fill-document.mdx
api-reference/edit/agent/: fill.mdx
api-reference/edit/templates/: create.mdx  delete.mdx  duplicate.mdx  fill.mdx  generate.mdx  get.mdx  list.mdx  update.mdx
api-reference/edits/: cancel.mdx  create.mdx  delete.mdx  get.mdx  list.mdx
api-reference/edits/templates/: create.mdx  delete.mdx  fill.mdx  get.mdx  list.mdx  update.mdx
api-reference/endpoint/: correct_image_orientation.mdx  create-messages.mdx  document_api.mdx  extract-from-document.mdx  extractions.mdx  generate-a-schema.mdx  generation.json  list-models.mdx  preprocess-document.mdx  process.mdx  promptify-a-schema.mdx  promptify.json  response.json
api-reference/environments/: create.mdx  delete.mdx  get.mdx  list.mdx  update.mdx
api-reference/evals/: create.mdx  delete.mdx  get.mdx  list.mdx  update.mdx
api-reference/evals/classify/: create.mdx  delete.mdx  get.mdx  list.mdx  publish.mdx  run-base.mdx  run-iteration.mdx  update.mdx
api-reference/evals/documents/: create.mdx  delete.mdx  get.mdx  list.mdx  update.mdx
api-reference/evals/extract/: create.mdx  delete.mdx  get.mdx  list.mdx  publish.mdx  run-base-stream.mdx  run-base.mdx  run-iteration-stream.mdx  run-iteration.mdx  update.mdx
api-reference/evals/iterations/: create.mdx  delete.mdx  distances.mdx  get.mdx  list.mdx
api-reference/evals/split/: create.mdx  delete.mdx  get.mdx  list.mdx  publish.mdx  run-base.mdx  run-iteration.mdx  update.mdx
api-reference/extractions/: cancel.mdx  create.mdx  delete.mdx  download.mdx  get.mdx  list.mdx  sources.mdx  stream.mdx  update.mdx  usage.mdx
api-reference/files/: analyze.mdx  complete-upload.mdx  download-link.mdx  get.mdx  list.mdx  upload.mdx
api-reference/files/blueprints/: cancel.mdx  create.mdx  get.mdx
api-reference/files/upload/: complete.mdx  create.mdx
api-reference/global/: list-models.mdx  sample_agencies.mdx  sample_models.mdx  submit.mdx  usage.mdx
api-reference/global/secrets/: create.mdx  delete.mdx  get.mdx  list.mdx  update.mdx
api-reference/jobs/: cancel.mdx  create.mdx  delete.mdx  list.mdx  retrieve.mdx  retry.mdx  status.mdx
api-reference/parses/: cancel.mdx  create.mdx  delete.mdx  get.mdx  list.mdx
api-reference/partitions/: cancel.mdx  create.mdx  delete.mdx  get.mdx  list.mdx
api-reference/processors/: create.mdx  delete.mdx  get.mdx  list.mdx  submit.mdx  update.mdx
api-reference/projects/: create.mdx  delete.mdx  extract.mdx  get.mdx  list.mdx  update.mdx
api-reference/projects/documents/: create.mdx  delete.mdx  get.mdx  list.mdx  update.mdx
api-reference/projects/iterations/: create.mdx  delete.mdx  distances.mdx  get.mdx  list.mdx
api-reference/schema/: enhance.mdx  generate.mdx  promptify.mdx  responses.mdx  system-prompt.mdx
api-reference/schemas/: enhance.mdx  generate.mdx
api-reference/secrets/: create.mdx  delete.mdx  get.mdx  list.mdx  set.mdx  update.mdx  value.mdx
api-reference/splits/: cancel.mdx  create.mdx  delete.mdx  get.mdx  list.mdx  reconstruct.mdx
api-reference/tables/: create.mdx  delete.mdx  download.mdx  get.mdx  list.mdx  profile.mdx  query.mdx  replace.mdx  schema.mdx  update.mdx  validate.mdx
api-reference/unit_tests/: test_docs_json_navigation_nesting.py  test_generate_openapi_filter.py  test_lint_snippets.py  test_openapi_description_hygiene.py
api-reference/usage/: blocks.mdx  primitives.mdx  runs.mdx
api-reference/worfklows/: get-run.mdx  run.mdx
api-reference/workflows/: apply-to.mdx  create.mdx  delete.mdx  diagnose-graph.mdx  discard-draft.mdx  duplicate.mdx  get-entities.mdx  get-resolved-schemas.mdx  get-run.mdx  get.mdx  list.mdx  plan-to.mdx  publish.mdx  run.mdx  spec.mdx  update.mdx
api-reference/workflows/artifacts/: get.mdx  list.mdx
api-reference/workflows/block-tests/: create.mdx  delete.mdx  execute.mdx  get.mdx  list.mdx  update.mdx
api-reference/workflows/blocks/: config-history.mdx  create-batch.mdx  create.mdx  delete.mdx  get-resolved-schemas.mdx  get.mdx  list.mdx  simulate.mdx  update.mdx  validate-config.mdx
api-reference/workflows/edges/: create-batch.mdx  create.mdx  delete-all.mdx  (+3 more)
(+426 files in other folders)
