load("//tools/bazel:docs_snippets.bzl", "docs_sdk_snippet_lints", "docs_sdk_snippet_lints_for_filters")
load("//tools/bazel:defs.bzl", "PYTHON_VENV_TAGS")

package(default_visibility = ["//visibility:public"])

SDK_SNIPPET_TAGS = PYTHON_VENV_TAGS + [
    "manual",
    "sdk-snippets",
]

filegroup(
    name = "docs_json",
    srcs = ["docs.json"],
)

filegroup(
    name = "docs_sources",
    srcs = glob([
        "**/*.md",
        "**/*.mdx",
        ".scripts/*.py",
        "unit_tests/**/*.py",
        "workflows/unit_tests/**/*.py",
    ], exclude = [
        ".snippets/**",
    ]) + [
        ":docs_json",
    ],
)

sh_test(
    name = "docs_graph_checks",
    srcs = ["//tools/bazel:run_pytest.sh"],
    args = ["open-source/docs/unit_tests/test_check_docs_graph.py"],
    data = [
        ":docs_sources",
        "//open-source/docs/api-reference:checked_openapi_json",
    ],
    tags = PYTHON_VENV_TAGS,
)

sh_binary(
    name = "docs_navigation_manifest_update",
    srcs = ["//tools/bazel:update_checked_contract_artifact.sh"],
    args = [
        "docs-navigation-manifest",
        "open-source/docs/docs.json",
        "//open-source/docs:docs_graph_checks",
        "//open-source/docs:snippet_structure",
        "//open-source/docs:docs_quality",
    ],
    data = [":docs_sources"],
    tags = PYTHON_VENV_TAGS + ["manual", "generated-update"],
)

sh_test(
    name = "snippet_structure",
    srcs = ["//tools/bazel:run_docs_snippet_structure.sh"],
    data = [":docs_sources"],
    tags = PYTHON_VENV_TAGS,
)

sh_test(
    name = "smoke",
    srcs = ["//tools/bazel:run_docs_smoke.sh"],
    data = [":docs_sources"],
    tags = PYTHON_VENV_TAGS + ["runtime-smoke"],
)

SDK_SNIPPET_LANGUAGE_SPECS = [
    {
        "flag": "--python-sdk-root",
        "language": "python",
        "sdk": "//open-source/sdk:generated_python_sdk",
        "snippet": "snippet_lint_python",
    },
    {
        "flag": "--node-sdk-root",
        "language": "typescript",
        "sdk": "//open-source/sdk:generated_node_sdk",
        "snippet": "snippet_lint_typescript",
    },
    {
        "flag": "--go-sdk-root",
        "language": "go",
        "sdk": "//open-source/sdk:generated_go_sdk",
        "snippet": "snippet_lint_go",
    },
    {
        "flag": "--rust-sdk-root",
        "language": "rust",
        "sdk": "//open-source/sdk:generated_rust_sdk",
        "snippet": "snippet_lint_rust",
    },
    {
        "flag": "--dotnet-sdk-root",
        "language": "dotnet",
        "sdk": "//open-source/sdk:generated_dotnet_sdk",
        "snippet": "snippet_lint_dotnet",
    },
    {
        "flag": "--php-sdk-root",
        "language": "php",
        "sdk": "//open-source/sdk:generated_php_sdk",
        "snippet": "snippet_lint_php",
    },
    {
        "flag": "--ruby-sdk-root",
        "language": "ruby",
        "sdk": "//open-source/sdk:generated_ruby_sdk",
        "snippet": "snippet_lint_ruby",
    },
    {
        "flag": "--java-sdk-root",
        "language": "java",
        "sdk": "//open-source/sdk:generated_java_sdk",
        "snippet": "snippet_lint_java",
    },
]

docs_sdk_snippet_lints(
    specs = SDK_SNIPPET_LANGUAGE_SPECS,
    tags = SDK_SNIPPET_TAGS,
)

SDK_SNIPPET_DOC_FILTER_SPECS = [
    {
        "filter": "open-source/docs/api-reference/",
        "name": "api_reference",
    },
    {
        "filter": "open-source/docs/core-concepts/",
        "name": "core_concepts",
    },
    {
        "filter": "open-source/docs/examples/",
        "name": "examples",
    },
    {
        "filter": "open-source/docs/overview/",
        "name": "overview",
    },
    {
        "filter": "open-source/docs/primitives/",
        "name": "primitives",
    },
    {
        "filter": "open-source/docs/widgets/",
        "name": "widgets",
    },
    {
        "filter": "open-source/docs/workflows/",
        "name": "workflows",
    },
]

docs_sdk_snippet_lints_for_filters(
    filter_specs = SDK_SNIPPET_DOC_FILTER_SPECS,
    language_specs = SDK_SNIPPET_LANGUAGE_SPECS,
    tags = SDK_SNIPPET_TAGS,
)

genquery(
    name = "sdk_snippet_targets_query",
    expression = "filter(\"^//open-source/docs:snippet_lint_\", kind(\"sh_test rule\", deps(//open-source/docs:docs_sdk_snippet_lints_only)))",
    scope = ["//open-source/docs:docs_sdk_snippet_lints_only"],
    strict = False,
)

sh_test(
    name = "generated_sdk_snippet_graph_check",
    srcs = ["//tools/bazel:run_generated_sdk_snippet_graph_check.sh"],
    args = [
        "--targets-file",
        "$(location :sdk_snippet_targets_query)",
    ] + [
        "--path=%s=$(location :%s_generated_sdk_path_query)" % (spec["language"], spec["snippet"])
        for spec in SDK_SNIPPET_LANGUAGE_SPECS
    ],
    data = [
        ":sdk_snippet_targets_query",
        "//tools/bazel:sdk_snippet_graph",
    ] + [
        ":%s_generated_sdk_path_query" % spec["snippet"]
        for spec in SDK_SNIPPET_LANGUAGE_SPECS
    ],
    tags = PYTHON_VENV_TAGS,
)

test_suite(
    name = "docs_sdk_snippet_lints_only",
    tests = [
        ":snippet_lint_python",
        ":snippet_lint_typescript",
        ":snippet_lint_go",
        ":snippet_lint_rust",
        ":snippet_lint_php",
        ":snippet_lint_ruby",
        ":snippet_lint_java",
        ":snippet_lint_dotnet",
    ],
)

test_suite(
    name = "docs_sdk_snippets",
    tests = [
        ":docs_sdk_snippet_lints_only",
        ":generated_sdk_snippet_graph_check",
    ],
)

sh_binary(
    name = "docs_sdk_snippets_update",
    srcs = ["//tools/bazel:update_checked_contract_artifact.sh"],
    args = [
        "docs-sdk-snippets",
        "open-source/docs",
        "//open-source/docs:docs_sdk_snippets",
        "//:api_artifact_graph",
        "//:api_surface_checks",
        "//open-source/docs:docs_quality",
    ],
    data = [":docs_sources"],
    tags = PYTHON_VENV_TAGS + ["manual", "generated-update"],
)

test_suite(
    name = "api_reference_check",
    tests = [
        ":docs_graph_checks",
        ":docs_sdk_snippets",
        "//open-source/docs/api-reference:generator_unit_tests",
        "//open-source/docs/api-reference:openapi_check",
        "//open-source/docs/api-reference:snippet_unit_tests",
    ],
)

test_suite(
    name = "experimental_docs_sdk_snippets",
    tests = [],
)

test_suite(
    name = "docs_quality",
    tests = [
        ":docs_graph_checks",
        ":smoke",
        ":snippet_structure",
        "//open-source/docs/api-reference:generator_unit_tests",
        "//open-source/docs/api-reference:openapi_check",
        "//open-source/docs/api-reference:snippet_unit_tests",
    ],
)

test_suite(
    name = "format_check",
    tests = [
        ":snippet_structure",
    ],
)

test_suite(
    name = "lint",
    tests = [
        ":docs_graph_checks",
        ":snippet_structure",
    ],
)

test_suite(
    name = "typecheck",
    tests = [
        ":docs_graph_checks",
    ],
)

test_suite(
    name = "quality",
    tests = [
        ":docs_quality",
        ":format_check",
        ":lint",
        ":typecheck",
    ],
)
