load("//factory/bazel:docs_snippets.bzl", "docs_sdk_snippet_lints", "docs_sdk_snippet_lints_for_filters")
load("//factory/bazel:defs.bzl", "PYTHON_VENV_TAGS")

package(default_visibility = ["//visibility:public"])

SDK_SNIPPET_TAGS = PYTHON_VENV_TAGS + [
    "manual",
    "sdk-snippets",
]

filegroup(
    name = "docs_json",
    srcs = ["docs.json"],
)

filegroup(
    name = "docs_content_sources",
    srcs = glob([
        "**/*.md",
        "**/*.mdx",
    ], exclude = [
        ".snippets/**",
    ]) + [
        # The api-reference/ subtree is its own Bazel package, so the glob above
        # stops at its boundary and misses ~71% of docs (all SDK snippets). Pull
        # it in explicitly so snippet extraction/linting tracks those files.
        "//public/docs/api-reference:api_reference_content_sources",
    ],
)

filegroup(
    name = "docs_sources",
    srcs = [
        ":docs_content_sources",
    ] + glob([
        ".scripts/*.py",
        "unit_tests/**/*.py",
        "workflows/unit_tests/**/*.py",
    ], exclude = [
        ".snippets/**",
    ]) + [
        ":docs_json",
    ],
)

filegroup(
    name = "snippet_lint_script",
    srcs = [".scripts/lint_snippets.py"],
)

sh_test(
    name = "docs_graph_checks",
    srcs = ["//factory/bazel:run_pytest.sh"],
    args = ["public/docs/unit_tests/test_check_docs_graph.py"],
    data = [
        ":docs_content_sources",
        "unit_tests/test_check_docs_graph.py",
        "//public/docs/api-reference:openapi_json",
    ],
    env = {
        "RETAB_DOCS_OPENAPI_JSON": "public/docs/api-reference/openapi.generated.json",
    },
    tags = PYTHON_VENV_TAGS,
)

sh_binary(
    name = "docs_navigation_manifest_update",
    srcs = ["//factory/bazel:update_checked_contract_artifact.sh"],
    args = [
        "docs-navigation-manifest",
        "public/docs/docs.json",
        "//public/docs:docs_graph_checks",
        "//public/docs:snippet_structure",
        "//public/docs:docs_quality",
    ],
    data = [":docs_content_sources"],
    tags = PYTHON_VENV_TAGS + ["manual", "generated-update"],
)

sh_test(
    name = "snippet_structure",
    srcs = ["//factory/bazel:run_docs_snippet_structure.sh"],
    data = [":docs_content_sources"],
    tags = PYTHON_VENV_TAGS,
)

sh_test(
    name = "smoke",
    srcs = ["//factory/bazel:run_docs_smoke.sh"],
    data = [":docs_content_sources"],
    tags = PYTHON_VENV_TAGS + ["runtime-smoke"],
)

genrule(
    name = "snippet_manifest",
    srcs = [
        ":docs_content_sources",
        ":snippet_lint_script",
    ],
    outs = ["snippet_manifest.json"],
    cmd = "$(location //factory/bazel:run_docs_snippet_lint.sh) all --write-manifest $$PWD/$@",
    tags = PYTHON_VENV_TAGS,
    tools = ["//factory/bazel:run_docs_snippet_lint.sh"],
)

SDK_SNIPPET_LANGUAGE_SPECS = [
    {
        "flag": "--python-sdk-root",
        "language": "python",
        "sdk": "//public/sdk:snippet_python_sdk",
        "snippet": "snippet_lint_python",
    },
    {
        "flag": "--node-sdk-root",
        "language": "typescript",
        "sdk": "//public/sdk:snippet_node_sdk",
        "snippet": "snippet_lint_typescript",
    },
    {
        "flag": "--go-sdk-root",
        "language": "go",
        "sdk": "//public/sdk:snippet_go_sdk",
        "snippet": "snippet_lint_go",
    },
    {
        "flag": "--rust-sdk-root",
        "language": "rust",
        "sdk": "//public/sdk:snippet_rust_sdk",
        "snippet": "snippet_lint_rust",
    },
    {
        "flag": "--dotnet-sdk-root",
        "language": "dotnet",
        "sdk": "//public/sdk:snippet_dotnet_sdk",
        "snippet": "snippet_lint_dotnet",
    },
    {
        "flag": "--php-sdk-root",
        "language": "php",
        "sdk": "//public/sdk:snippet_php_sdk",
        "snippet": "snippet_lint_php",
    },
    {
        "flag": "--ruby-sdk-root",
        "language": "ruby",
        "sdk": "//public/sdk:snippet_ruby_sdk",
        "snippet": "snippet_lint_ruby",
    },
    {
        "flag": "--java-sdk-root",
        "language": "java",
        "sdk": "//public/sdk:snippet_java_sdk",
        "snippet": "snippet_lint_java",
    },
]

docs_sdk_snippet_lints(
    specs = SDK_SNIPPET_LANGUAGE_SPECS,
    tags = SDK_SNIPPET_TAGS,
)

sh_binary(
    name = "docs_sdk_snippets_benchmark",
    srcs = ["//factory/bazel:run_docs_snippet_benchmark.sh"],
    args = [
        "--manifest",
        "$(location :snippet_manifest)",
        "--runner",
        "$(location //factory/bazel:run_docs_snippet_lint.sh)",
    ] + [
        "%s=%s" % (spec["flag"], "$(location %s)" % spec["sdk"])
        for spec in SDK_SNIPPET_LANGUAGE_SPECS
    ],
    data = [
        ":snippet_manifest",
        "//factory/bazel:docs_snippet_benchmark",
        "//factory/bazel:run_docs_snippet_lint.sh",
    ] + [
        spec["sdk"]
        for spec in SDK_SNIPPET_LANGUAGE_SPECS
    ],
    tags = SDK_SNIPPET_TAGS,
)

sh_test(
    name = "snippet_lint_structure",
    srcs = ["//factory/bazel:run_docs_snippet_lint.sh"],
    args = [
        "all",
        "--manifest",
        "$(location :snippet_manifest)",
        "--structural-only",
    ],
    data = [
        ":snippet_lint_script",
        ":snippet_manifest",
    ],
    tags = SDK_SNIPPET_TAGS,
)

SDK_SNIPPET_DOC_FILTER_SPECS = [
    {
        "filter": "public/docs/api-reference/",
        "name": "api_reference",
    },
    {
        "filter": "public/docs/core-concepts/",
        "name": "core_concepts",
    },
    {
        "filter": "public/docs/examples/",
        "name": "examples",
    },
    {
        "filter": "public/docs/overview/",
        "name": "overview",
    },
    {
        "filter": "public/docs/primitives/",
        "name": "primitives",
    },
    {
        "filter": "public/docs/widgets/",
        "name": "widgets",
    },
    {
        "filter": "public/docs/workflows/",
        "name": "workflows",
    },
]

docs_sdk_snippet_lints_for_filters(
    filter_specs = SDK_SNIPPET_DOC_FILTER_SPECS,
    language_specs = SDK_SNIPPET_LANGUAGE_SPECS,
    tags = SDK_SNIPPET_TAGS,
)

genquery(
    name = "sdk_snippet_targets_query",
    expression = "filter(\"^//public/docs:snippet_lint_\", kind(\"sh_test rule\", deps(//public/docs:docs_sdk_snippet_lints_only)))",
    scope = ["//public/docs:docs_sdk_snippet_lints_only"],
    strict = False,
)

genquery(
    name = "docs_sdk_snippets_core_tests_query",
    expression = "tests(//public/docs:docs_sdk_snippets_core)",
    scope = ["//public/docs:docs_sdk_snippets_core"],
    strict = False,
)

sh_test(
    name = "generated_sdk_snippet_graph_check",
    srcs = ["//factory/bazel:run_generated_sdk_snippet_graph_check.sh"],
    args = [
        "--targets-file",
        "$(location :sdk_snippet_targets_query)",
    ] + [
        "--path=%s=$(location :%s_generated_sdk_path_query)" % (spec["language"], spec["snippet"])
        for spec in SDK_SNIPPET_LANGUAGE_SPECS
    ] + [
        "--inputs=%s=$(location :%s_sdk_inputs_query)" % (spec["language"], spec["snippet"])
        for spec in SDK_SNIPPET_LANGUAGE_SPECS
    ],
    data = [
        ":sdk_snippet_targets_query",
        "//factory/bazel:sdk_snippet_graph",
    ] + [
        ":%s_generated_sdk_path_query" % spec["snippet"]
        for spec in SDK_SNIPPET_LANGUAGE_SPECS
    ] + [
        ":%s_sdk_inputs_query" % spec["snippet"]
        for spec in SDK_SNIPPET_LANGUAGE_SPECS
    ],
    tags = PYTHON_VENV_TAGS,
)

sh_test(
    name = "docs_snippet_regression_guard",
    srcs = ["//factory/bazel:run_docs_snippet_regression_guard.sh"],
    args = [
        "--aggregate-tests-file",
        "$(location :docs_sdk_snippets_core_tests_query)",
    ] + [
        "--openapi-json-path=%s=$(location :%s_openapi_json_path_query)" % (spec["language"], spec["snippet"])
        for spec in SDK_SNIPPET_LANGUAGE_SPECS
    ] + [
        "--checked-openapi-path=%s=$(location :%s_checked_openapi_path_query)" % (spec["language"], spec["snippet"])
        for spec in SDK_SNIPPET_LANGUAGE_SPECS
    ] + [
        "--manifest-deps=%s=$(location :%s_manifest_deps_query)" % (spec["language"], spec["snippet"])
        for spec in SDK_SNIPPET_LANGUAGE_SPECS
    ] + [
        "--docs-sources-deps=%s=$(location :%s_docs_sources_deps_query)" % (spec["language"], spec["snippet"])
        for spec in SDK_SNIPPET_LANGUAGE_SPECS
    ] + [
        "--shared-runner-deps=%s=$(location :%s_shared_runner_deps_query)" % (spec["language"], spec["snippet"])
        for spec in SDK_SNIPPET_LANGUAGE_SPECS
    ],
    data = [
        ":docs_sdk_snippets_core_tests_query",
        "//factory/bazel:docs_snippet_regression_guard",
    ] + [
        ":%s_openapi_json_path_query" % spec["snippet"]
        for spec in SDK_SNIPPET_LANGUAGE_SPECS
    ] + [
        ":%s_checked_openapi_path_query" % spec["snippet"]
        for spec in SDK_SNIPPET_LANGUAGE_SPECS
    ] + [
        ":%s_manifest_deps_query" % spec["snippet"]
        for spec in SDK_SNIPPET_LANGUAGE_SPECS
    ] + [
        ":%s_docs_sources_deps_query" % spec["snippet"]
        for spec in SDK_SNIPPET_LANGUAGE_SPECS
    ] + [
        ":%s_shared_runner_deps_query" % spec["snippet"]
        for spec in SDK_SNIPPET_LANGUAGE_SPECS
    ],
    tags = PYTHON_VENV_TAGS,
)

test_suite(
    name = "docs_sdk_snippet_lints_only",
    tests = [
        ":snippet_lint_python",
        ":snippet_lint_typescript",
        ":snippet_lint_go",
        ":snippet_lint_rust",
        ":snippet_lint_php",
        ":snippet_lint_ruby",
        ":snippet_lint_java",
        ":snippet_lint_dotnet",
    ],
)

test_suite(
    name = "docs_sdk_snippets_core",
    tests = [
        ":docs_sdk_snippet_lints_only",
        ":generated_sdk_snippet_graph_check",
        ":snippet_lint_structure",
    ],
)

test_suite(
    name = "docs_sdk_snippets",
    tests = [
        ":docs_sdk_snippets_core",
        ":docs_snippet_regression_guard",
    ],
)

sh_binary(
    name = "docs_sdk_snippets_update",
    srcs = ["//factory/bazel:update_checked_contract_artifact.sh"],
    args = [
        "docs-sdk-snippets",
        "public/docs",
        "//public/docs:docs_sdk_snippets",
        "//:api_artifact_graph",
        "//:api_surface_checks",
        "//public/docs:docs_quality",
    ],
    data = [":docs_content_sources"],
    tags = PYTHON_VENV_TAGS + ["manual", "generated-update"],
)

test_suite(
    name = "api_reference_check",
    tests = [
        ":docs_graph_checks",
        ":docs_sdk_snippets",
        "//public/docs/api-reference:generator_unit_tests",
        "//public/docs/api-reference:openapi_check",
        "//public/docs/api-reference:snippet_unit_tests",
    ],
)

test_suite(
    name = "experimental_docs_sdk_snippets",
    tests = [],
)

test_suite(
    name = "docs_quality",
    tests = [
        ":docs_graph_checks",
        ":smoke",
        ":snippet_structure",
        "//public/docs/api-reference:generator_unit_tests",
        "//public/docs/api-reference:openapi_check",
        "//public/docs/api-reference:snippet_unit_tests",
    ],
)

test_suite(
    name = "format_check",
    tests = [
        ":snippet_structure",
    ],
)

test_suite(
    name = "lint",
    tests = [
        ":docs_graph_checks",
        ":snippet_structure",
    ],
)

test_suite(
    name = "typecheck",
    tests = [
        ":docs_graph_checks",
    ],
)

test_suite(
    name = "quality",
    tests = [
        ":docs_quality",
        ":format_check",
        ":lint",
        ":typecheck",
    ],
)
